// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingSpinner ouiLoadingSpinner--medium testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiLoadingSpinner size l is rendered 1`] = `
<span
  class="ouiLoadingSpinner ouiLoadingSpinner--large"
/>
`;

exports[`OuiLoadingSpinner size m is rendered 1`] = `
<span
  class="ouiLoadingSpinner ouiLoadingSpinner--medium"
/>
`;

exports[`OuiLoadingSpinner size s is rendered 1`] = `
<span
  class="ouiLoadingSpinner ouiLoadingSpinner--small"
/>
`;

exports[`OuiLoadingSpinner size xl is rendered 1`] = `
<span
  class="ouiLoadingSpinner ouiLoadingSpinner--xLarge"
/>
`;
